force-app/main/default/objects/Contact/fields/Job_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Sub_Category__c</fullName>
    <label>Job Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Sub_Category</valueSetName>
    </valueSet>
</CustomField>