force-app/main/default/objects/Contact/fields/Level_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Experience__c</fullName>
    <label>Level of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_of_experience</valueSetName>
    </valueSet>
</CustomField>