force-app/main/default/objects/Contact/fields/Salary_Desired__c.field-meta.xml
<CustomField>
    <fullName>Salary_Desired__c</fullName>
    <label>Salary Desired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>