force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Employed</fullName>
                <default>true</default>
                <label>Not Employed</label>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>